# ippl

src/: CMakeLists.txt  Ippl.cpp  Ippl.h
src/Communicate/: Archive.h  Buffers.cpp  Buffers.hpp  Collectives.hpp  Communicate.cpp  Communicate.h  Communicator.h  DataTypes.h  Operations.h  PointToPoint.hpp  Request.cpp  Request.h  Window.h  Window.hpp
src/Core/: CMakeLists.txt  Fields.h
src/Decomposition/: OrthogonalRecursiveBisection.h  OrthogonalRecursiveBisection.hpp
src/Expression/: IpplExpressions.h  IpplOperations.h
src/FFT/: FFT.h  FFT.hpp
src/Field/: BConds.h  BConds.hpp  BareField.h  BareField.hpp  BareFieldOperations.hpp  BcTypes.h  BcTypes.hpp  Field.h  Field.hpp  FieldOperations.hpp  HaloCells.h  HaloCells.hpp
src/FieldLayout/: FieldLayout.h  FieldLayout.hpp
src/Index/: Index.h  Index.hpp  NDIndex.h  NDIndex.hpp
src/Interpolation/: CIC.h  CIC.hpp
src/LinearSolvers/: PCG.h  Preconditioner.h  SolverAlgorithm.h
src/Manager/: BaseManager.h  FieldSolverBase.h  PicManager.h
src/MaxwellSolvers/: Maxwell.h
src/Meshes/: CartesianCentering.h  CartesianCentering.hpp  Mesh.h  Mesh.hpp  UniformCartesian.h  UniformCartesian.hpp
src/Particle/: ParticleAttrib.h  ParticleAttrib.hpp  ParticleBC.h  ParticleBase.h  ParticleBase.hpp  ParticleLayout.h  ParticleLayout.hpp  ParticleSpatialLayout.h  ParticleSpatialLayout.hpp
src/Partition/: Partitioner.h  Partitioner.hpp
src/PoissonSolvers/: FFTOpenPoissonSolver.h  FFTOpenPoissonSolver.hpp  FFTPeriodicPoissonSolver.h  FFTPeriodicPoissonSolver.hpp  LaplaceHelpers.h  P3MSolver.h  P3MSolver.hpp  PoissonCG.h
(+53 files in other folders)
